--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,44 +9,6 @@
 @import "footer";
 @import "header";
 @import "quienessomos";
+@import "mediaQuerys";
 
 
-/* ///// Media queries //////*/
-
-@media (max-width: 575.98px) {
-  h1 {
-    font-size: 40px;
-    line-height: normal;
-  }
-  h2 {
-    font-size: 32px;
-  }
-  .plans {
-    min-width: unset;
-    padding: 40px;
-  }
-  .carousel-item p {
-    font-size: 20px;
-  }
-
-  
-}
-
-@media (min-width: 576px) and (max-width: 767.98px) {
-}
-
-@media (min-width: 768px) and (max-width: 991.98px) {
-  h2 {
-    font-size: 30px;
-  }
-  .plans {
-    min-width: unset;
-    padding: 40px 20px;
-  }
-}
-
-@media (min-width: 992px) and (max-width: 1199.98px) {
-}
-
-@media (min-width: 1200px) {
-}
