--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -87,14 +87,18 @@ ul li:hover ul {
 }
 
 /* ///// Actividades //////*/
-.actividades table {
+#actividades {
+  display: flex;
   justify-content: center;
+}
+#actividades .table {
   border-collapse: collapse;
   border-spacing: 0;
   width: 81%;
   border: 1px solid #ddd;
   font-size: 1.5rem;
   display: block;
+  align-items: center;
   overflow-x: auto;
   margin: 0 auto;
 }
