--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -316,7 +316,7 @@ footer a {
   outline: none;
 }
 
-/* ///// Quienes somos? //////*/
+/* ///// Nosotros //////*/
 .quienes-somos {
   padding: 10px;
 }
