--- a/assets/scss/_contacto.scss
+++ b/assets/scss/_contacto.scss
@@ -11,7 +11,19 @@
     margin-top: -2rem;
     background-color: rgb(13, 110, 253);
     border-radius: 10px;
+    border: solid 1px #1b1b32;
     box-shadow: 0px 1px 4px 1px white;
+    -webkit-box-shadow: 0px 1px 4px 1px white;
+    -moz-box-shadow: 0px 1px 4px 1px white;
+  }
+
+  .contacto .btn-contacto {
+    margin-top: -2rem;
+    border-radius: 10px;
+    border: solid 1px #1b1b32;
+    box-shadow: 0px 1px 4px 1px white;
+    -webkit-box-shadow: 0px 1px 4px 1px white;
+    -moz-box-shadow: 0px 1px 4px 1px white;
   }
   
   .contacto .row {
