--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -154,7 +154,19 @@ ul li:hover ul {
   margin-top: -2rem;
   background-color: rgb(13, 110, 253);
   border-radius: 10px;
+  border: solid 1px #1b1b32;
   box-shadow: 0px 1px 4px 1px white;
+  -webkit-box-shadow: 0px 1px 4px 1px white;
+  -moz-box-shadow: 0px 1px 4px 1px white;
+}
+
+.contacto .btn-contacto {
+  margin-top: -2rem;
+  border-radius: 10px;
+  border: solid 1px #1b1b32;
+  box-shadow: 0px 1px 4px 1px white;
+  -webkit-box-shadow: 0px 1px 4px 1px white;
+  -moz-box-shadow: 0px 1px 4px 1px white;
 }
 
 .contacto .row {
